Test to check if jumping issue when scrolling on mobile is fixed

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -234,10 +234,6 @@
     bottom: 0;
     min-width: 100%;
     min-height: 100%;
-    -webkit-transform: translate3d(0, 0, 0);
-    transform: translate3d(0, 0, 0);
-    -webkit-transform: translateX(-50%);
-    transform: translateX(-50%)
 }
 .parallax-container .text-center {
     position: absolute;
